[tool.poetry]
name = "analyser"
version = "0.1.0"
description = ""
authors = ["usrsem <andrey7menov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
loguru = "^0.6.0"
alembic = "^1.7.7"
asyncpgsa = "^0.27.1"
psycopg2-binary = "^2.9.3"
marshmallow-enum = "^1.5.1"
marshmallow = "^3.15.0"

[tool.poetry.dev-dependencies]
pytest = "7.1"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
